# mini-coding-agent

./: .env.example  .gitignore  README.md  pyproject.toml
benchmarks/: coding_tasks.json
docs/: agent-persistence-flow.html
docs/architecture/: agent-harness-v1-overview.md
docs/review-pack/: README.md
examples/: mcp_math_server.py  mcp_notes_server.py
mca/: __init__.py  cli.py  context_manager.py  evaluator.py  memory.py  metrics.py  models.py  run_store.py  runtime.py  tools.py  web.py  workspace.py
scripts/: collect_resume_metrics.py  run_large_scale_experiments.py  run_provider_experiments.py
skills/hello/: SKILL.md
tests/: test_context_manager.py  test_evaluator.py  test_mca.py  test_memory.py  test_metrics.py  test_run_store.py  test_safety_invariants.py  test_task_state.py  test_web.py
web/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
web/src/: main.tsx  styles.css
